--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.1.14.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
             <version>5.1.14.RELEASE</version>
             <scope>provided</scope>
