--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
+            <classifier>indy</classifier>
             <version>2.5.11</version>
         </dependency>
         <dependency>
