--- a/pom.xml
+++ b/pom.xml
@@ -222,102 +222,122 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-ant</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-cli-commons</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-cli-picocli</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-console</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-datetime</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-docgenerator</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-groovydoc</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-groovysh</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-jmx</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-json</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-jsr223</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-macro</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-nio</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-servlet</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-sql</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-swing</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-templates</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-test</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-test-junit5</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
 
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-xml</artifactId>
             <version>2.5.11</version>
+            <classifier>indy</classifier>
         </dependency>
         <!--groovy all-->
         <dependency> <!-- enables mocking of classes (in addition to interfaces) -->
